--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -75,7 +75,16 @@
     <div class="table-output">
 
 
-     
+      <table class="table table-stripped table-hover">
+        <thead>
+          <tr>
+            <th>Amount ({{currency}})</th>
+            <th>Category</th>
+            <th>Description</th>
+            <th>Date</th>
+            <th></th>
+          </tr>
+        </thead>
 
         <tbody  class="table-body">
 
