password reset done

--- a/templates/authentication/set-new-password.html
+++ b/templates/authentication/set-new-password.html
@@ -12,22 +12,13 @@
 
       <div class="card-body">
         <div class="card-title py-3">
-          <h4>Login to your  account</h4>
+          <h4>Reset your password</h4>
         </div>
-        <form action="{% url 'login' %}" method="post">
+        <form action="{% url 'reset-user-password' uidb64 token %}" method="post">
           {% csrf_token %}
 
           {% include 'partials/_messages.html' %}
-          <div class="form-group">
-            <input
-              type="text"
-              name="username"
-              placeholder="username"
-              id="usernameField"
-              value="{{fieldValues.username}}"
-              class="form-control form-control-sm"
-            />
-          </div>
+          
           <div class="form-group">
             <input
               type="password"
@@ -36,20 +27,29 @@
               class="form-control form-control-sm"
               id="passwordField"
             />
+            <small class="float-right py-3 showPasswordToggle">SHOW</small>
           </div>
-          <input type="submit" value="Login" class="btn btn-block btn-primary submit-btn" />
+
+          <div class="form-group">
+            <input
+              type="password"
+              name="password2"
+              placeholder="Confirm Password"
+              class="form-control form-control-sm"
+              id="passwordField"
+            />
+            <small class="float-right py-3 showPasswordToggle">SHOW</small>
+          </div>
+          <input type="submit" value="Submit" class="btn btn-block btn-primary submit-btn" />
         </form>
 <div class="container">
-        <span class="text-lead lead">Don't have an account?</span><a href="{% url 'register' %}">Register</a>
+        <span class="text-lead lead">Have an account?</span><a href="{% url 'login' %}">Login</a>
         <br>
-        <span class="text-lead lead">Forgot password?</span><a href="{% url 'request-password' %}">Reset it here.</a>
+        <span class="text-lead lead">Don't have an account?</span><a href="{% url 'register' %}">Register</a>
     </div>
       </div>
 
-
-      
       </div>
-      
     </div>
   </div>
   <div class="col-md-4"></div>
