--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -57,7 +57,11 @@
           </div>
           <input type="submit" value="Register" class="btn btn-block btn-primary submit-btn" />
         </form>
-
+<div class="container">
+        <span class="text-lead lead">Have an account?</span><a href="{% url 'login' %}">Login</a>
+        <br>
+        <span class="text-lead lead">Forgot password?</span><a href="{% url 'request-password' %}">Reset it here.</a>
+    </div>
       </div>
 
       </div>
