--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -13,11 +13,6 @@
           Expenses
         </a>
       </li>
-      <li class="nav-item">
-        
-          Income
-        
-      </li>
     </ul>
 
     <h6
@@ -34,16 +29,11 @@
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
-        
+       <a class="nav-link" href="{% url 'stats'%}">
           Expenses Summary
-        
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <span data-feather="file-text"></span>
-          Income Summary
         </a>
       </li>
+     
     </ul>
 
     <h6
