--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -28,8 +28,15 @@
     {% include 'partials/_messages.html' %} {% if expenses.count %}
 
     <div class="row">
-      <div class="col-md-8"></div>
+      <div class="col-md-8">
+
+
+
+      </div>
       <div class="col-md-4">
+        <a href="{% url 'export-pdf' %}" class="btn btn-primary">Export PDF</a>
+        <a href="{% url 'export-excel' %}" class="btn btn-primary">Export Excel</a>
+        <a href="{% url 'export-csv' %}" class="btn btn-secondary">Export CSV</a>
 
         <div class="form-group">
           <input type="text" class="form-control" id="searchField" placeholder="Search">
