--- a/templates/expenses/pdf-output.html
+++ b/templates/expenses/pdf-output.html
@@ -1,3 +1,5 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -20,8 +22,9 @@
         </style>
     </head>
     <body>
-        <img src="{% static 'img/logo.png' %}" width="35" height="35"/>
-
+        <h1>
+        <img src="{% static 'static/img/logo.png' %}" width="35" height="35"/>
+        </h1>
         <h2>Expense List</h2>
 
         <table class="table">
