--- a/templates/expenses/stats.html
+++ b/templates/expenses/stats.html
@@ -20,8 +20,9 @@
     </div>
 
     <div class="col-md-2">
-      <a href="" class="btn btn-primary">BACK</a>
-    </div>
+    <a href="{% url 'other_page' %}" class="btn btn-primary">BACK</a>
+</div>
+
 
   </div>
 
