--- a/templates/expenses/edit-expense.html
+++ b/templates/expenses/edit-expense.html
@@ -60,6 +60,7 @@
             {% endfor %}
           </select>
         </div>
+
         <div class="form-group">
           <label for="">Date of Expense</label>
           <input
@@ -79,5 +80,7 @@
     </div>
   </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 
 {% endblock %}
