--- a/templates/expenses/edit-expense.html
+++ b/templates/expenses/edit-expense.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block content %}
+{{ values }}
 
 <div class="container mt-4">
   <div class="row">
@@ -46,7 +47,7 @@
             value="{{values.description}}"
           />
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
           <label for="">Category</label>
           <select class="form-control" name="category">
             <option selected name="category" value="{{values.category}}"
@@ -59,7 +60,20 @@
 
             {% endfor %}
           </select>
-        </div>
+        </div>-->
+
+        <div class="form-group">
+    <label for="">Category</label>
+    <select class="form-control" name="category" id="category-dropdown">
+        <option value="" selected disabled>Select Category</option>
+        {% for category in categories %}
+            <option value="{{ category.name }}">{{ category.name }}</option>
+        {% endfor %}
+        <option value="custom">Enter Custom Category</option>
+    </select>
+    <input type="text" class="form-control mt-2" name="custom_category" id="custom-category-input" style="display: none;">
+</div>
+
 
         <div class="form-group">
           <label for="">Date of Expense</label>
@@ -81,6 +95,18 @@
   </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var categoryDropdown = document.getElementById('category-dropdown');
+        var customCategoryInput = document.getElementById('custom-category-input');
+
+        categoryDropdown.addEventListener('change', function () {
+            var selectedCategory = categoryDropdown.value;
+            customCategoryInput.style.display = selectedCategory === 'custom' ? 'block' : 'none';
+        });
+    });
+</script>
+
 
 
 {% endblock %}
