--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -1,9 +1,10 @@
 {% load static %}
+{% load i18n %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>BillBliss  {% block title %}
+    <title>{% trans BillBliss %}{% block title %}
     {% endblock %}   </title>
     <!-- Bootstrap core CSS -->
 <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
@@ -12,6 +13,7 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
   </head>
+  
   <body>
 
     <main role="main">
