--- a/templates/expenses/edit-expense.html
+++ b/templates/expenses/edit-expense.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% load i18n %} {% block content %}
 {{ values }}
 
 <div class="container mt-4">
@@ -7,10 +8,10 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="{% url 'expenses'%}">Expenses</a>
+            <a href="{% url 'expenses'%}">{% trans "Expenses" %}</a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">
-            Edit Expense
+            {% trans"Edit Expense" %}
           </li>
         </ol>
       </nav>
@@ -20,7 +21,7 @@
       <a
         href="{% url 'expense-delete' expense.id %}"
         class="btn btn-danger btn-sm"
-        >Delete</a
+        >{% trans "Delete" %}</a
       >
     </div>
   </div>
@@ -30,7 +31,7 @@
       <form action="{% url 'expense-edit' expense.id %}" method="post">
         {% include 'partials/_messages.html'%} {% csrf_token %}
         <div class="form-group">
-          <label for="">Amount</label>
+          <label for="">{% trans "Amount" %}</label>
           <input
             type="text"
             class="form-control form-control-sm"
@@ -39,7 +40,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="">Description</label>
+          <label for="">{% trans "Description" }</label>
           <input
             type="text"
             class="form-control form-control-sm"
@@ -63,20 +64,20 @@
         </div>-->
 
         <div class="form-group">
-    <label for="">Category</label>
+    <label for="">{% trans "Category" %}</label>
     <select class="form-control" name="category" id="category-dropdown">
-        <option value="" selected disabled>Select Category</option>
+        <option value="" selected disabled>{% trans "Select Category" %}</option>
         {% for category in categories %}
             <option value="{{ category.name }}">{{ category.name }}</option>
         {% endfor %}
-        <option value="custom">Enter Custom Category</option>
+        <option value="custom">{% trans "Enter Custom Category" %}</option>
     </select>
     <input type="text" class="form-control mt-2" name="custom_category" id="custom-category-input" style="display: none;">
 </div>
 
 
         <div class="form-group">
-          <label for="">Date of Expense</label>
+          <label for="">{% trans "Date of Expense" %}</label>
           <input
             type="date"
             value="{{values.date |date:'Y-m-d' }}"
@@ -87,7 +88,7 @@
 
         <input
           type="submit"
-          value="Save"
+          value='{% trans "Save" %}'
           class="btn btn-primary btn-primary-sm"
         />
       </form>
@@ -106,6 +107,7 @@
         });
     });
 </script>
+
 
 
 
