--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -55,7 +55,7 @@
         </h6>-->
         
 
-        <li class="nav-item">
+ <!--       <li class="nav-item">
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
         <span>{% trans "Languages" %}</span>
     </h6>
@@ -68,7 +68,7 @@
         </li>
     </ul>
 </li>
-
+-->
 
       
 
@@ -93,6 +93,7 @@
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+<!--
 <script>
 function changeLanguage(language) {
     console.log('Selected language:', language);
@@ -126,7 +127,7 @@ function changeLanguage(language) {
     });
 }
 
-</script>
+</script>-->
 
 
 
